--- a/stylesMob.css
+++ b/stylesMob.css
@@ -1224,45 +1224,48 @@
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background-color: rgba(0, 0, 0, 0.7);
-    border: none;
     cursor: pointer;
+    font-size: 24px;
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: all 0.3s ease;
     z-index: 10;
-    margin: 0 10px;
-  }
-  
-  .slider-button.prev {
-    left: 0;
-  }
-  
-  .slider-button.next {
-    right: 0;
+    transition: background-color 0.3s ease;
+    -webkit-tap-highlight-color: transparent;
+    touch-action: manipulation;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    user-select: none;
   }
   
   .slider-button:hover {
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+  
+  .slider-button.prev {
+    left: 10px;
+  }
+  
+  .slider-button.next {
+    right: 10px;
   }
   
   .slider-button::after {
-    content: '';
-    color: white;
-    font-size: 24px;
-    font-weight: bold;
+    content: none;
   }
   
   .slider-button.prev::after {
-    content: '<';
+    content: none;
   }
   
   .slider-button.next::after {
-    content: '>';
+    content: none;
   }
   
   
